# hello-a2a

./: .gitignore  README.md  pyproject.toml  run_agent.sh  test_agent.sh
.github/: dependabot.yml
.github/workflows/: continuous-integration.yml  enable-automerge.yml
.qoder/quests/: refactoring-summary.md  update-dependencies-and-refactor.md
0.1/: README.md  requirements.txt  setup.py
0.1/agents/: agent.py
0.1/hosts/: __main__.py  push_notification_listener.py
0.2/: README.md  __main__.py  a2a_admin.py  a2a_metrics.py  a2a_test_client.py  agent.py  agent_selection_test.py  app.py  element_agent.py  element_agent_executor.py  element_tools.py  pyproject.toml  simple_test_client.py  test_agent_selection.py  test_agent_selection_cli.py  test_agent_selection_direct.py  test_agent_selection_unit.py  test_batch.py  test_batch_enhanced.py  test_cases.json  test_client.py  test_message.py
0.2/resources/: __init__.py  loader.py  periodic_table.py
agents/: README.md  __main__.py  agent.py  periodic_table.py  task_manager.py  test_agent.py  tools.py
agents/langgraph/: __main__.py  agent.py
agents/resources/: __init__.py  loader.py  (+1 more)
common/: types.py
hello-a2a-go/: README.md  go.mod
hello-a2a-java/: README.md  ko.md  pom.xml
hello-a2a-js/: README.md  package-lock.json  package.json
hello-a2a-python/: README.drawio  README.md  hello-a2a-python.drawio  requirements.txt  setup.py  start_cli.sh  start_host_agent.sh  start_remote_agent.bat  start_remote_agent.ps1  start_remote_agent.sh  test_file
hosts/: __main__.py  push_notification_listener.py
(+93 files in other folders)
