[project]
name = "hello-a2a"
version = "0.1.0"
description = "Hello Agent2Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "pytest-asyncio>=0.23.5",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.0",
    "langchain-ollama>=0.3.1",
    "langchain-openai>=0.3.16",
    "langgraph>=0.3.18",
    "pydantic>=2.10.6",
    "sse-starlette>=2.2.1",
    "starlette>=0.46.1",
    "uvicorn>=0.34.0",
    "jwcrypto>=1.5.6",
    "pyjwt>=2.10.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = ["pytest>=8.3.5", "pytest-mock>=3.14.0", "ruff>=0.11.2"]

[tool.hatch.build.targets.wheel]
packages = ["common", "hosts", "agents"]
