[project]
name = "langgraph-a2a-agents"
version = "0.1.0"
description = "LangGraph agents for currency conversion and periodic table elements"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.2.1",
    "click>=8.1.8",
    "httpx>=0.28.1",
    "langchain-openai>=0.3.16",
    "langgraph>=0.4.1",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
]

[project.scripts]
a2a-server = "__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
